# SSO-eve-authorization

./: Authorization_engine.cpp  Authorization_engine.h  CMakeLists.txt  LICENSE  Main.qml  README.md  Tcp_server.cpp  Tcp_server.h  Validating_JWT.cpp  Validating_JWT.h  main.cpp
android_openssl/: android_openssl.cmake
third-party-lib/android_openssl/: CMakeLists.txt
third-party-lib/jwt-cpp/jwt-cpp/: jwt.h
third-party-lib/jwt-cpp/jwt-cpp/traits/kazuho-picojson/: traits.h
